--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body style="background-color: #000000;">
     <canvas id="canvas"></canvas>
+    <div id="controls">
+        <div class="control-item">
+            <label for="massSlider">Mass:</label>
+            <input type="range" id="massSlider" min="1" max="100" value="50">
+            <span id="massValue">50</span>
+        </div>
+        <div class="control-item">
+            <label for="sizeSlider">Size:</label>
+            <input type="range" id="sizeSlider" min="5" max="50" value="10">
+            <span id="sizeValue">10</span>
+        </div>
+    </div>
+    <button id="resetBtn">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
